# quadrotor_simulator_mujoco

./: CMakeLists.txt  README.md  package.xml
include/: MuJoCoMessageHandler.h
launch/: single_quadrotor_payload_sim.launch.py  single_quadrotor_sim.launch.py
model/mujoco/: drone.xml  drone_payload.xml
src/: MuJoCoMessageHandler.cpp  glfw_adapter.cc  simulate.cc
